# directx-render-pipeline

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cmakePreset.json
docs/: architecture.md  design-goals.md  rendering-pipeline.md  roadmap.md  study-resources.md
shaders/: Forward.hlsl
src/: main.cpp
src/Core/: Window.cpp  Window.h
